--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: /
+baseURL: https://prachipatelportfolio.netlify.app/
 theme: hugo-apero
 languageCode: en
 title: Prachi Patel
@@ -75,7 +75,7 @@ menu:
       weight: 1
   header:
     - name: About
-      title: About Blogophonic
+      title: About Me
       url: /about/
       weight: 1
     - name: Projects
